MUMUP-1152 : minor issue with overlap on short screens

--- a/css/angular.css
+++ b/css/angular.css
@@ -8209,8 +8209,8 @@ button:focus {
   font-weight: 200;
 }
 .page-content {
-  position: relative;
-  top: 48px;
+  padding-top: 48px;
+  padding-bottom: 17px;
 }
 .portlet-title div {
   position: relative;
